
7.86  2018-07-02
  - Added template attribute to Mojolicious::Command.
  - Improved Mojo::IOLoop::Subprocess to only fork new processes after the event
    loop has been started.

7.85  2018-06-17
  - Removed deprecated build_tx, config, handler and log methods from Mojo.
  - Added promisify method to Mojo::UserAgent::Transactor.
  - Improved Mojolicious::Command to die on template errors.

7.84  2018-06-05
  - Fixed a bug where test servers would be started when reusing a
    Mojo::UserAgent object after fork.

7.83  2018-06-02
  - Replaced MOJO_DAEMON_DEBUG and MOJO_USERAGENT_DEBUG environment variables
    with MOJO_SERVER_DEBUG and MOJO_CLIENT_DEBUG. (anparker)
  - Updated IO::Socket::SSL requirement to 2.009 for ALPN support.
  - Added modules Mojo::IOLoop::Stream::HTTPClient,
    Mojo::IOLoop::Stream::HTTPServer, Mojo::IOLoop::Stream::WebSocketClient and
    Mojo::IOLoop::Stream::WebSocketServer. (anparker)
  - Added transition method to Mojo::IOLoop. (anparker)
  - Added close_connections method to Mojo::Server::Daemon. (anparker)
  - Added stream_class and tls_protocols arguments to client and server methods
    in Mojo::IOLoop. (anparker, sri)
  - Fixed a small render_maybe argument localization bug.

7.82  2018-05-27
  - Removed experimental status from new_tag and selector methods in Mojo::DOM.
  - Improved Mojo::Server::PSGI with support for the before_server_start hook.
  - Fixed a bug where render_maybe in Mojolicious::Controller could not render
    multiple alternatives properly because arguments were not localized.

7.81  2018-05-21
  - Added request_id attribute to Mojo::Message::Request.
  - Improved all built in templates to contain a comment with their request id.
  - Improved some log messages to contain a request id.

7.80  2018-05-20
  - Many users expected that Mojo::UserAgent would verify all TLS certificates
    by default. Unfortunately that has not been the case so far, but will change