@@ -287,6 +287,8 @@ This is the class hierarchy of the L<Mojolicious> distribution.
 
 =back
 
+=item * L<Mojo::IOLoop::Subprocess>
+
 =item * L<Mojo::IOLoop::TLS>
 
 =item * L<Mojo::Log>
@@ -352,8 +354,6 @@ This is the class hierarchy of the L<Mojolicious> distribution.
 =item * L<Mojo::Exception>
 
 =item * L<Mojo::Headers>
-
-=item * L<Mojo::IOLoop::Subprocess>
 
 =item * L<Mojo::JSON::Pointer>
 
