@@ -11,8 +11,9 @@ use Mojo::IOLoop;
 use Mojo::IOLoop::Subprocess;
 
 # Huge result
-my ($fail, $result);
+my ($fail, $result, @start);
 my $subprocess = Mojo::IOLoop::Subprocess->new;
+$subprocess->on(start => sub { push @start, shift->pid });
 $subprocess->run(
   sub { shift->pid . $$ . ('x' x 100000) },
   sub {
@@ -27,6 +28,7 @@ Mojo::IOLoop->start;
 ok $subprocess->pid, 'process id available';
 ok !$fail, 'no error';
 is $result, $$ . 0 . $subprocess->pid . ('x' x 100000), 'right result';
+is_deeply \@start, [$subprocess->pid], 'start event has been emitted once';
 
 # Custom event loop
 ($fail, $result) = ();
